fix: linebreak instead of overflow

--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@ body {
     font-weight: bolder;
     height: 100vh;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .line {
     margin-right: 10px;
     float: left;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 [contenteditable="true"].input {
